--- a/test/consul/cilium-consul.yaml
+++ b/test/consul/cilium-consul.yaml
@@ -1,4 +1,4 @@
 ---
-cafile: './test/consul/consul-client-ca.crt'
-keyfile: './test/consul/consul-client.key'
-certfile: './test/consul/consul-client.crt'
+cafile: '/tmp/cilium-consul-certs/consul-client-ca.crt'
+keyfile: '/tmp/cilium-consul-certs/consul-client.key'
+certfile: '/tmp/cilium-consul-certs/consul-client.crt'
